# doltcli-ex

./: LICENSE  README.md  README.org  pyproject.toml
doltcli_ex/: io.py  operate.py
doltcli_ex/scripts/: add.py  rm.py
