[tool.poetry]
name = "doltcli-ex"
version = "0.1.12"
description = "Enhanced Dolt CLI"
authors = ["yuiant <gyuiant@gmail.com>"]
license = "MIT"
# readme="README.org"
homepage="https://github.com/yuiant/doltcli-ex"
repository="https://github.com/yuiant/doltcli-ex"


[tool.poetry.scripts]
doltadd="doltcli_ex.scripts.add:main"
doltrm="doltcli_ex.scripts.rm:main"


[tool.poetry.dependencies]
python = "^3.7"
doltpy = "2.0.13"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
